<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="120dp"
        android:layout_marginTop="40dp"
        android:contentDescription="@string/info_icone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/ic_vamosrachar_branco_round" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/real"
        android:textColor="#FFFFFF"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <EditText
        android:id="@+id/totalEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="5"
        android:hint="@string/dica_valor"
        android:importantForAutofill="no"
        android:inputType="number|numberDecimal"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="42sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="@+id/textView1" />

    <TextView
        android:id="@+id/pessoasTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/dica_pessoas"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="@+id/totalEditText"
        app:layout_constraintStart_toStartOf="@+id/totalEditText"
        app:layout_constraintTop_toBottomOf="@+id/totalEditText" />

    <ImageButton
        android:id="@+id/maisButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/mais"
        android:tint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="@+id/pessoasTextView"
        app:layout_constraintStart_toStartOf="@+id/totalEditText"
        app:layout_constraintTop_toTopOf="@+id/pessoasTextView"
        app:srcCompat="@android:drawable/arrow_up_float" />

    <ImageButton
        android:id="@+id/menosButton"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/colorPrimary"
        android:contentDescription="@string/menos"
        android:tint="#ffffff"
        app:layout_constraintBottom_toBottomOf="@+id/pessoasTextView"
        app:layout_constraintEnd_toEndOf="@+id/totalEditText"
        app:layout_constraintTop_toTopOf="@+id/pessoasTextView"
        app:srcCompat="@android:drawable/arrow_down_float" />

    <ImageView
        android:id="@+id/pessoasImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/descricao_pessoas"
        app:layout_constraintBottom_toBottomOf="@+id/pessoasTextView"
        app:layout_constraintEnd_toEndOf="@+id/textView1"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="@+id/pessoasTextView"
        app:srcCompat="@drawable/ic_pessoas_foreground" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/real"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/resultadoTextView"
        app:layout_constraintEnd_toEndOf="@+id/textView1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView1"
        app:layout_constraintTop_toTopOf="@+id/resultadoTextView" />

    <TextView
        android:id="@+id/resultadoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/parcela"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="42sp"
        app:layout_constraintEnd_toEndOf="@+id/menosButton"
        app:layout_constraintStart_toStartOf="@+id/maisButton"
        app:layout_constraintTop_toBottomOf="@+id/pessoasTextView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/compartilharFButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        android:tint="#FFFFFF"
        app:fabCustomSize="70dp"
        app:fabSize="auto"
        app:layout_constraintBottom_toBottomOf="@+id/lerFButton"
        app:layout_constraintEnd_toStartOf="@+id/lerFButton"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/lerFButton"
        app:maxImageSize="70dp"
        app:rippleColor="#FFFFFF"
        app:srcCompat="@android:drawable/ic_menu_share" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/lerFButton"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginBottom="70dp"
        android:backgroundTint="@color/colorPrimary"
        android:clickable="true"
        app:fabCustomSize="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/compartilharFButton"
        app:maxImageSize="70dp"
        app:srcCompat="@android:drawable/ic_lock_silent_mode_off" />

</androidx.constraintlayout.widget.ConstraintLayout>